test/compile-fail/resolution/pub/in-unresolved/expected.txt
error: unresolved mod `b`
 --> top.rhdl:1:14
  |
1 | pub(in crate::b) struct a {}
  |               ^ no `b` mod in `crate`
